--- a/SDOperator/htmls/css/chris-base.css
+++ b/SDOperator/htmls/css/chris-base.css
@@ -4,6 +4,8 @@ html ,body{
 	height: 100%
 }
 
+/***************************************************** 外层 *****************************************************/
+
 .mainpage_baseboard {
     /*background: #d8d8d8;*/
     position:relative;
@@ -77,6 +79,65 @@ html ,body{
 .mainpage_test {
     background: #eeffee;
 }
+
+/***************************************************** SD_INFO *****************************************************/
+
+.sdinfo_board {
+    /*background: #d8d8d8;*/
+    position:relative;
+    width: 100%;
+    height: 100%;
+
+    /* 使用Flex */
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+
+    /* 竖排模式 */
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -moz-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+
+    /* 横向居中 */
+    -webkit-box-align: center;
+    -moz-flex-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    -moz-align-items: center;
+    align-items: center;
+}
+
+.sdinfo_item {
+    /*background: #d8d8d8;*/
+    position:relative;
+    width: 80%;
+    height: 30px;
+    margin: 4px;
+}
+
+.sdinfo_title {
+    /*background: #d8d8d8;*/
+    position:relative;
+    width: 40%;
+    height: 100%;
+    font-size: 18px;
+}
+
+.sdinfo_value {
+    /*background: #d8d8d8;*/
+    position:relative;
+    width: 60%;
+    height: 100%;
+    font-size: 18px;
+}
+
+/*****************************************************  SD_OP  *****************************************************/
 
 
 
