--- a/SDOperator/htmls/css/chris-base.css
+++ b/SDOperator/htmls/css/chris-base.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 html ,body{
-	height: 100%
+    height: 100%
 }
 
 /***************************************************** 外层 *****************************************************/
@@ -113,15 +113,28 @@ html ,body{
     align-items: center;
 }
 
+.sdinfo_title {
+    /*background: #d8d8d8;*/
+    font-size: 30px;
+    margin: 4px;
+}
+
+.sdinfo_opinfo {
+    /*background: #d8d8d8;*/
+    font-size: 18px;
+    color: #ffaaaa;
+    margin: 16px;
+}
+
 .sdinfo_item {
     /*background: #d8d8d8;*/
     position:relative;
     width: 80%;
     height: 30px;
-    margin: 4px;
+    margin: 8px;
 }
 
-.sdinfo_title {
+.sditem_title {
     /*background: #d8d8d8;*/
     position:relative;
     width: 40%;
@@ -129,7 +142,7 @@ html ,body{
     font-size: 18px;
 }
 
-.sdinfo_value {
+.sditem_value {
     /*background: #d8d8d8;*/
     position:relative;
     width: 60%;
@@ -153,7 +166,7 @@ html ,body{
 
 /* 元素隐藏 */
 .divHide{
-	display: none !important
+    display: none !important
 }
 
 /* 信息承载板 */
