--- a/SDOperator/htmls/css/chris-base.css
+++ b/SDOperator/htmls/css/chris-base.css
@@ -63,7 +63,7 @@ html ,body{
     border-color: #979797;
     border-width: 1px;
     position:relative;
-    width: 38%;
+    width: 44%;
     height: 90%;
 }
 
@@ -72,7 +72,7 @@ html ,body{
     border-color: #979797;
     border-width: 1px;
     position:relative;
-    width: 58%;
+    width: 52%;
     height: 90%;
 }
 
@@ -151,6 +151,23 @@ html ,body{
 }
 
 /*****************************************************  SD_OP  *****************************************************/
+
+.sdop_title {
+    /*background: #d8d8d8;*/
+    font-size: 30px;
+    margin-top: 4px;
+    margin-bottom: 12px;
+}
+
+.sdop_button {
+    /*background: #d8d8d8;*/
+    position:relative;
+    width: 70%;
+    height: 48px;
+    font-size: 18px;
+    margin: 12px;
+}
+
 
 
 
