--- a/SDOperator/htmls/css/chris-base.css
+++ b/SDOperator/htmls/css/chris-base.css
@@ -211,6 +211,33 @@ html ,body{
     align-items: center;
 }
 
+.chris_rowleftflex {
+
+    /* 使用Flex */
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+
+    /* 横排模式 */
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+    -moz-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+
+    /* 纵向居中 */
+    -webkit-box-align: center;
+    -moz-flex-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    -moz-align-items: center;
+    align-items: center;
+}
+
 /* Div 基本布局: Flex纵向布局，横向居中 */
 .chris_coltopflex {
 
